# Stack_project

./: CMakeLists.txt  commands.h  commands.txt  emulator.cpp  emulator.h  enum_commands.h  main.cpp  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h
src/: CMakeLists.txt  Stack.cpp
src/include/: Stack.h
stack_lib/: CMakeLists.txt
stack_lib/include/: Stack.h
stack_lib/test/: test.cpp
